# cppCmakeTemplate

./: .gitignore  CMakeLists.txt  Readme.md
inc/: League.h  Readme.md  std_header.h  utilStructs.h
lib/: Readme.md
src/: CMakeLists.txt  League.cpp  Readme.md  main.cpp
tests/: Readme.md
